# testeunitario_trabalho3

./: .gitignore  pyproject.toml
src/models/: ice_cream_stand.py  restaurant.py
test/models/: test_ice_cream_stand.py  test_restaurant.py
