[tool.poetry]
name = "testeunitario-trabalho3"
version = "0.1.0"
description = ""
authors = ["Felipe Meyer <ffmeyer@gmail.com>"]
readme = "README.md"
packages = [{include = "testeunitario_trabalho3"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
prospector = "^1.10.2"
pip-audit = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
